--- a/style/contacts.css
+++ b/style/contacts.css
@@ -155,7 +155,7 @@
 
 .list-user {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-start;
     padding-top: 15px;
     padding-left: 36px;
