--- a/style/add_contact.css
+++ b/style/add_contact.css
@@ -1,9 +1,9 @@
 dialog[open] {
-    display: flex;
-    z-index: 31;
+   display: flex;
+   z-index: 31;
 }
 
-.dialog-content.show{
+.dialog-content.show {
    transform: translateX(0);
 }
 
@@ -23,7 +23,7 @@ dialog[open] {
    width: 1200px;
    min-height: 500px;
    transform: translateX(200%);
-   
+
    transition: transform 1s ease-in-out;
 }
 
@@ -129,4 +129,21 @@ dialog[open] {
 .button-section-contact {
    display: flex;
    gap: 16px;
+}
+
+.dialog-message {
+   position: absolute;
+   background-color: #2A3647;
+   border: none;
+   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+   border-radius: 20px;
+   padding: 20px;
+   transform: translateX(400%);
+   transition: transform 1s ease-in-out;
+   top: 760px;
+   left: 750px;
+}
+
+.dialog-message.show {
+   transform: translateX(0);
 }
