--- a/style/add_task_responsive.css
+++ b/style/add_task_responsive.css
@@ -40,6 +40,7 @@
         flex-direction: column;
         flex: 1;
         padding: 8px 0px;
+        border-radius: 16px;
     }
 
     .sidebar-footer {
@@ -50,6 +51,10 @@
         position: sticky;
         bottom: 0px;
         min-height: 0px;
+    }
+
+    .main-content {
+        padding: 16px 64px;
     }
 
 }
