--- a/style/add_contact.css
+++ b/style/add_contact.css
@@ -139,11 +139,16 @@ dialog[open] {
    border-radius: 20px;
    padding: 20px;
    transform: translateX(400%);
-   transition: transform 1s ease-in-out;
+   transition: transform 1.2s ease-in-out;
    top: 760px;
    left: 750px;
 }
 
 .dialog-message.show {
    transform: translateX(0);
+}
+
+.margin-add-dialog{
+   margin-top: -30px;
+   height: 0px;
 }
