--- a/style/board_style.css
+++ b/style/board_style.css
@@ -213,6 +213,14 @@ h1{
     font-weight: 400;
     font-size:16px;
     font-family: "Inter";
+    margin-left: -12px;
+    border: 2px solid #fff;
+    z-index: 1;
+}
+
+.assigned_user_content .assigned_user_avatar{
+    width:42px;
+    height:42px;
 }
 
 .assigned_users_section_and_priority{
@@ -228,11 +236,6 @@ h1{
     position: relative;
 }
 
-.assigned_user_avatar {
-    margin-left: -12px;
-    border: 2px solid #fff;
-    z-index: 1;
-}
 .assigned_user_avatar:first-child {
     margin-left: 0; 
 }
