--- a/style/board_style.css
+++ b/style/board_style.css
@@ -214,13 +214,15 @@ h1{
     font-size:16px;
     font-family: "Inter";
     margin-left: -12px;
-    border: 2px solid #fff;
+    border: 1px solid #fff;
+    box-sizing: border-box;
     z-index: 1;
 }
 
 .assigned_user_content .assigned_user_avatar{
     width:42px;
     height:42px;
+    border: 2px solid #fff;
 }
 
 .assigned_users_section_and_priority{
