--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -99,11 +99,9 @@
 
 .login-form {
     width: 100%;
-    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 16px;
 }
 
 .lock::after {
@@ -121,6 +119,7 @@
     border: 1px solid #D1D1D1;
     border-radius: 10px;
     padding: 0 21px;
+    margin-top: 32px;
 }
 
 .login-input {
@@ -153,7 +152,6 @@
 .login-buttons {
     display: flex;
     gap: 32px;
-    margin-top: 32px;
 }
 
 .login-button-primary,
@@ -199,7 +197,7 @@
     display: flex;
     justify-content: center;
     gap: 32px;
-    padding-bottom: 32px;
+    padding: 22px 0;
 }
 
 .login-footer a {
@@ -236,11 +234,11 @@
 }
 
 .login-error-message {
-    margin-top: 16px;
+    margin: 8px 0;
     font-size: 18px;
     color: #FF3B3B;
     text-align: center;
-    min-height: 18px;
+    min-height: 34px;
     font-family: Inter, sans-serif;
 
 }
