--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -25,7 +25,6 @@
 
     .login-footer {
         position: static;
-        padding-bottom: 24px;
         display: flex;
         justify-content: center;
         gap: 16px;
@@ -39,26 +38,17 @@
 }
 
 @media (max-width: 768px) {
-
-    .login-wrapper {
-        justify-content: flex-start;
-        align-items: center;
-    }
-
     .login-logo {
         width: 72px;
     }
 
     .login-container {
-       width: 100%;
+        width: 100%;
         max-width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
-
-    .login-footer {
-        margin-top: 40px;
+        justify-content: space-evenly;
     }
 }
 
@@ -86,8 +76,6 @@
         justify-content: center;
         align-items: center;
         gap: 12px;
-        margin-top: 24px;
-        margin-bottom: 16px;
     }
 
     .login-button-primary{
@@ -121,8 +109,6 @@
     }
 
     .login-footer {
-        margin-top: 60px;
-        padding-bottom: 32px;
         display: flex;
         justify-content: center;
         gap: 16px;
@@ -150,18 +136,18 @@
 
 @media (min-width: 900px) and (max-width: 1100px) and (max-height: 700px) {
     .login-footer {
-        margin-top: 60px;
         padding-bottom: 40px;
     }
 }
 
 @media (min-width: 480px) and (max-width: 600px) and (min-height: 600px) and (max-height: 800px) {
     .login-footer {
-        margin-top: 56px;
         padding-bottom: 40px;
     }
 }
 
 @media (max-height: 800px) {
-    
+    .login-card{
+        padding: 32px 16px;
+    }
 }
